# chap-core

./: .buildinfo  .dockerignore  .env.example  .gitignore  404.html  AUTHORS.rst  CHAPKIT.md  CHAPKIT_PLAYWRIGHT.md  CHAPKIT_TESTING_GUIDE.md  CLAUDE.html  CLAUDE.md  DECISIONS.md  Dockerfile  Dockerfile.dev  Dockerfile.inla  Dockerfile.integrationtest  Dockerfile.r-model.integrationtest  Dockerfile.test  Dockerfile.worker  EXPLAIN.md  EXPLAIN_LEARNING.md  HierarchicalRegressionModel_hydromet_10_results.html  HierarchicalRegressionModel_hydromet_clean_results.html  ISSUES.md  LICENSE  Makefile  NaiveModel_hydromet_10_results.html  README.md  README.rst  RegressionModel_hydro_met_subset_results.html  RegressionModel_hydromet_10_results.html  SERVICEKIT_BUGS.md  SSMWithSigmoidEffect_hydro_met_subset_results.html  SSMWithSigmoidEffect_hydromet_10_results.html  SSM_hydro_met_subset_results.html  SSM_hydromet_10_results.html  TODO.rst  alembic.ini  bitbucket-pipelines.yml  changelog.html  (+65 more)
.github/: CODEOWNERS  dependabot.yml
_modules/: chap_core.html  index.html
_sources/: chap_core.adaptors.rst.txt  chap_core.assessment.metrics.rst.txt  chap_core.assessment.rst.txt  chap_core.climate_data.rst.txt  chap_core.data.gluonts_adaptor.rst.txt  chap_core.data.rst.txt  chap_core.database.rst.txt  chap_core.external.rst.txt  chap_core.fetch.rst.txt  chap_core.file_io.rst.txt  chap_core.geo_coding.rst.txt  chap_core.hpo.rst.txt  chap_core.models.rst.txt  chap_core.plotting.rst.txt  chap_core.predictor.rst.txt  chap_core.rest_api.rst.txt  chap_core.rest_api.v1.rst.txt  chap_core.rst.txt  chap_core.runners.rst.txt  chap_core.simulation.rst.txt  chap_core.spatio_temporal_data.rst.txt  chap_core.testing.rst.txt  chap_core.time_period.rst.txt  chap_core.transformations.rst.txt  chap_core.worker.rst.txt  modules.rst.txt
_unused/: HISTORY.rst  Makefile  gee_legacy.py  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  test_meteostat_wrapper.py
alembic/: README.md  env.py
andre/: compare.py  comparison.csv  load_json.py  plot.py  response.json  response_actual.json
api/: index.html
architecture/: .gitignore  README.md  export-diagrams.js  export-likec4.js  workspace.dsl
chap-cli/: chap-core-cli-setup.html  downloaded_json_data.html  earth-engine-auth.html  eval-reference.html  evaluate2-reference.html  evaluation-workflow.html  explain-lime-reference.html  index.html  minimalist-example.html  report-reference.html  using-pa-with-cli.html
chap_core/: __init__.py  _legacy_dataset.py  alarms.py  api.py  api_types.py  chap_cli.py  cli.py  climate_predictor.py  common_routes.py  dataset_protocols.py  datatypes.py  docker_helper_functions.py  ensemble_meta_report.csv  ensemble_report.0.csv  ensemble_report.csv  ensemble_report.nc  ensemble_report_1.0.csv  ensemble_report_1.csv  ensemble_report_1.nc  exceptions.py  geojson.py  geometry.py  geoutils.py  internal_state.py  log_config.py  main.py  model_spec.py  omnipy_lib.py  pandas_adaptors.py  rbased_docker.py  rest_api.py  training_control.py  util.py  validators.py
charts/: README.md
climate_health/: __init__.py  _legacy_dataset.py  alarms.py  api.py  api_types.py  chap_cli.py  cli.py  climate_predictor.py  dataset.py  dataset_protocols.py  datatypes.py  docker_helper_functions.py  geojson.py  geometry.py  internal_state.py  main.py  model_spec.py  omnipy_lib.py  pandas_adaptors.py  rest_api.py  training_control.py  util.py
config/: Readme.md  approved_model_repos.yaml  model_templates.yaml  models.yml
contributor/: adding_cli_commands.html  architecture_diagrams.html  chap-contributor-setup.html  code_overview.html  creating_custom_backtest_plots.html  creating_custom_metric_plots.html  creating_custom_metrics.html  creating_custom_threshold_strategies.html  creating_feature_generators.html  database_migrations.html  development_tools.html  documentation-testing-plan.html  evaluation_abstraction.html  evaluation_pipeline.html  evaluation_walkthrough.html  evaluation_walkthrough_exec.html  getting_started.html  index.html  local-dhis2-installation.html  mlproject_configuration.html  preference_learning.html  r_docker_image.html  rest_api_and_database.html  testing.html  vocabulary.html  windows_contributors.html  writing_building_documentation.html
dac2026/: configurable-model.html  index.html
database/: docker-compose.yml
design_documents/: cli_evaluate_xarray.md
dhis2analyticsResponses/: wryMP8p8k1C_LEVEL-qpXLDdXT3po_LAST_52_WEEKS.csv
docs/: .buildinfo  CLAUDE.md  Makefile  api_docs.html  architecture_meeting.html  backtest-plots.md  capabilities.md  changelog.html  changelog.md  conf.py  developing_custom_models.html  docker-compose-doc.html  external_models.html  features_overview.md  genindex.html  history.html  index.html  index.md  index.rst  installation.html  make.bat  objects.inv  readme.html  search.html  searchindex.js  usage.html
docs_source/: Makefile  api_docs.rst  architecture_meeting.md  changelog.md  conf.py  developing_custom_models.rst  docker-compose-doc.md  external_models.md  external_models.rst  full_listing.rst  index.rst  installation.md  installation.rst  make.bat
example_data/: DESCRIPTION  Minimalist_example_data.csv  Minimalist_multiregion_example_data.csv  Organisation units.geojson  anonymous_chap_request.json  anonymous_make_dataset_request.json  anonymous_make_dataset_request2.json  anonymous_make_prediction_request.json  climate_data.csv  climate_data_daily.csv  column_mapping.json  create-backtest-with-data-extended.json  create-backtest-with-data-weekly-debug.json  create-backtest-with-data.json  data.csv  data_prepared_for_lagged_regression.csv  dhis_test_model  era5_land_daily_data.csv  example_evaluation.nc  example_evaluation_2.nc  example_polygons.geojson  example_weekly_predictions.csv  hpo_config.yaml  hydro_met_subset.csv  hydromet_5_filtered.csv  laos_pulled_data.csv  laos_subset.csv  laos_subset.geojson  laos_subset_custom_columns.csv  monthly_data.csv  nicaragua_weekly_data.csv  nicaragua_weekly_subset.csv  obfuscated_laos_data.tsv  population_Laos.json  tidy_data.csv  (+7 more)
(+1587 files in other folders)
