[project]
name = "chap_core"
version = "2.0.0.dev0"
description = "Climate Health Analysis Platform (CHAP)"
readme = "README.md"
requires-python = ">=3.13,<3.14"

authors = [{ name = "Chap Team", email = "chap@dhis2.org" }]
license = { text = "AGPLv3 license" }
keywords = ["chap_core"]

dependencies = [
    "bionumpy>=1.0.14",
    "cyclopts>=4.10.1",
    "diskcache>=5.6.3",
    "docker>=7.1.0",
    "fastapi>=0.135.3",
    "sqlmodel>=0.0.38",
    "psycopg2-binary>=2.9.10",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "gitpython>=3.1.45",
    "gluonts>=0.16.2",
    "libpysal>=4.13.0",
    "matplotlib>=3.10.6",
    "mlflow-skinny>=3.11.1",
    "pandas>=2.1.4",
    "plotly>=6.3.1",
    "pooch>=1.8.2",
    "pycountry>=24.6.1",
    "pydantic>=2.11.10",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.24",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "rq>=2.6.0",
    "scikit-learn>=1.7.2",
    "topojson>=1.10",
    "unidecode>=1.4.0",
    "uvicorn>=0.44.0",
    "xarray>=2025.10.0",
    "netcdf4>=1.7.2",
    "orjson>=3.11.8",
    "celery[pytest]>=5.6.3",
    "packaging>=25.0",
    "jsonschema>=4.25.1",
    "altair>=5.5.0",
    "virtualenv>=20.34.0",
    "geojson-pydantic>=2.1.1",
    "pandera>=0.26.1",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.8.0",
    "pyarrow>=23.0.1",
    "numpy>=2.1.3", # held back because of gluonts
    "gunicorn>=25.3.0",
    "optuna>=4.5.0",
    "httpx>=0.28.1",
    "alembic>=1.14.0",
    "chapkit>=0.17.1",
    "cryptography>=46.0.7",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "build>=1.4.2",
    "coverage>=7.10.7",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "pygments>=2.20.0",
    "pre-commit>=4.3.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "markdown-exec[ansi]>=1.7",
    "mktestdocs>=0.2.2",
    "tabulate>=0.9",
    "wheel>=0.45.1",
    "ipython>=9.12.0",
    "mypy>=1.20.0",
    "pyright>=1.1.408",
    "pandas-stubs>=2.3.3.260113",
    "fakeredis>=2.26.0",
    "types-pyyaml>=6.0.12.20260408",
    "types-requests>=2.31.0.6",
    "types-python-dateutil>=2.9.0.20260408",
    "types-pytz>=2026.1.1.20260408",
    "types-jsonschema>=4.26.0.20260408",
    "types-psycopg2>=2.9.21.20260408",
    "types-shapely>=2.1.0.20260408",
    "types-geopandas>=1.1.3.20260408",
    "testcontainers[postgres]>=4.10.0",
]

[project.optional-dependencies]
explainability = [
    "stumpy>=1.14.1",
    "pyts>=0.13.0",
    "fastdtw>=0.3.4",
]

[project.urls]
Homepage = "https://github.com/dhis2/chap-core"

[project.scripts]
chap = "chap_core.cli:main"

[build-system]
requires = ["uv_build>=0.10,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."


[tool.ruff]
target-version = "py313"
line-length = 120
# Let Ruff discover both chap_core and tests for both "check" and "format"
include = ["chap_core/**/*.py", "tests/**/*.py"]
exclude = ["external_models/**"]

[tool.ruff.lint]
select = ["I", "UP", "F", "B", "C4", "PIE", "RUF", "FURB", "PERF", "ISC", "RSE", "W", "A", "TCH", "SIM"]
ignore = ["B008", "RUF012", "SIM108", "SIM115"]
fixable = ["ALL"]

# Disable all linting in tests, but still allow formatting there.
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ALL"]
"__init__.py" = ["F401"]
# lime.py uses intentional wildcard imports to allow easy swapping of pipeline modules
"chap_core/explainability/lime.py" = ["F403", "F405"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
log_cli = false
log_level = "WARNING"
norecursedirs = [
    "tests/data_wrangling",
    "tests/spatio_temporal_data",
    "tests/.github_cache",
    ".mypy_cache",
    "runs",
    "dist",
    "target",
    "external_models",
]
filterwarnings = [
    "ignore::DeprecationWarning:plotly.io._kaleido",
    # Celery plugin is imported before pytest can rewrite it
    # This is expected behavior when using celery.contrib.pytest
    "ignore::pytest.PytestAssertRewriteWarning",
    # Suppress ResourceWarnings from SQLAlchemy - connections are properly cleaned up
    # but Python's garbage collector complains about timing
    "ignore::ResourceWarning",
]
markers = [
    "slow: marks tests as slow running",
]
python_files = "test_*.py"
# Import mode to avoid other assertion rewriting issues
# Ignore specific test files that should not run
addopts = "--import-mode=importlib --ignore=tests/test_meteostat_wrapper"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
follow_imports = "normal"
files = ["chap_core/", "tests/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
# Suppress errors prevalent in test code (tighten gradually)
disable_error_code = [
    "arg-type",
    "call-arg",
    "attr-defined",
    "name-defined",
    "import-untyped",
    "import-not-found",
    "no-redef",
    "return-value",
    "var-annotated",
    "call-overload",
    "no-any-return",
]

# Ignore missing stubs for third-party libraries without type hints
[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bionumpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pooch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "topojson.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "libpysal.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gluonts.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "npstructures.*"
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.13"
include = ["chap_core/", "tests/"]
exclude = [
    "**/.venv",
    "runs",
    "external_models",
    "tests/.github_cache",
]
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportPrivateUsage = false
reportMissingImports = "warning"
reportMissingTypeStubs = false
# Suppress errors prevalent in test code (tighten gradually):
# - reportArgumentType: Month(2020, 1) int literals vs Number type
# - reportCallIssue: BNPDataClass positional arguments
# - reportAttributeAccessIssue: Dynamic attributes on BNPDataClass
# - reportUndefinedVariable: Missing imports in some test files
# - reportOptionalMemberAccess: Optional handling
# - Others: Various minor issues
reportArgumentType = false
reportCallIssue = false
reportAttributeAccessIssue = false
reportUndefinedVariable = false
reportOptionalMemberAccess = false
reportIndexIssue = false
reportGeneralTypeIssues = false
reportAbstractUsage = false
reportRedeclaration = false
reportOptionalSubscript = false
reportReturnType = false
reportAssignmentType = false
