[project]
name = "chap_core"
version = "2.0.0.dev1"
description = "Climate Health Analysis Platform (CHAP)"
readme = "README.md"
requires-python = ">=3.13,<3.14"

authors = [{ name = "Chap Team", email = "chap@dhis2.org" }]
license = { text = "AGPLv3 license" }
keywords = ["chap_core"]

dependencies = [
    "bionumpy>=1.0.14",
    "cyclopts>=4.10.1",
    "diskcache>=5.6.3",
    "docker>=7.1.0",
    "fastapi>=0.136.3",
    "starlette>=1.0.1",             # security floor; transitive via fastapi
    "sqlmodel>=0.0.38",
    "psycopg2-binary>=2.9.12",
    "geopandas>=1.1.3",
    "geopy>=2.4.1",
    "gitpython>=3.1.50",
    "gluonts>=0.16.2",
    "libpysal>=4.14.1",
    "matplotlib>=3.10.9",
    "mlflow-skinny>=3.11.1",  # held: 3.12.0 pins starlette<1, conflicts with our starlette floor
    "pandas>=2.1.4",
    "plotly>=6.3.1",
    "pooch>=1.9.0",
    "pycountry>=24.6.1",
    "pydantic>=2.11.10",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "rq>=2.9.0",
    "scikit-learn>=1.8.0",
    "topojson>=1.10",
    "unidecode>=1.4.0",
    "uvicorn>=0.48.0",
    "xarray>=2025.10.0",
    "netcdf4>=1.7.2",  # held: 1.7.4 requires numpy>=2.3 on Win ARM64, gluonts caps numpy<2.2
    "celery[pytest]>=5.6.3",
    "packaging>=25.0",
    "jsonschema>=4.26.0",
    "altair>=5.5.0",
    "virtualenv>=20.34.0",
    "geojson-pydantic>=2.1.1",
    "pandera>=0.26.1",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
    "pyarrow>=23.0.1",              # required at runtime by vegafusion → pandas.__arrow_c_stream__; optional in pandas so resolver can't see it
    "numpy>=2.1.3",                 # held back because of gluonts
    "gunicorn>=25.3.0",
    "optuna>=4.5.0",
    "httpx>=0.28.1",
    "alembic>=1.14.0",
    "chapkit>=0.23",
    "cryptography>=46.0.7",
    "croniter>=6.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "build>=1.5.0",
    "coverage>=7.14.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "pygments>=2.20.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "markdown-exec[ansi]>=1.12.1",
    "mktestdocs>=0.2.5",
    "tabulate>=0.10.0",
    "wheel>=0.47.0",
    "ipython>=9.13.0",
    "mypy>=2.1.0",
    "pyright>=1.1.409",
    "pandas-stubs>=3.0.0.260204",
    "fakeredis>=2.35.1",
    "types-pyyaml>=6.0.12.20260518",
    "types-requests>=2.31.0.6",  # held: pinning higher pulls urllib3>=2, conflicts with celery's pytest-celery<urllib3<2
    "types-python-dateutil>=2.9.0.20260518",
    "types-pytz>=2026.2.0.20260518",
    "types-jsonschema>=4.26.0.20260518",
    "types-psycopg2>=2.9.21.20260518",
    "types-shapely>=2.1.0.20260518",
    "types-geopandas>=1.1.3.20260518",
    "testcontainers[postgres]>=4.14.2",
]

[project.optional-dependencies]
explainability = [
    "stumpy>=1.14.1",
    "pyts>=0.13.0",
    "fastdtw>=0.3.4",
]

[project.urls]
Homepage = "https://github.com/dhis2/chap-core"

[project.scripts]
chap = "chap_core.cli:main"

[build-system]
requires = ["uv_build>=0.10,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."


[tool.ruff]
target-version = "py313"
line-length = 120
# Let Ruff discover both chap_core and tests for both "check" and "format"
include = ["chap_core/**/*.py", "tests/**/*.py"]
exclude = ["external_models/**"]

[tool.ruff.lint]
select = [
    "I",
    "UP",
    "F",
    "B",
    "C4",
    "PIE",
    "RUF",
    "FURB",
    "PERF",
    "ISC",
    "RSE",
    "W",
    "A",
    "TCH",
    "SIM",
]
ignore = ["B008", "RUF012", "SIM108", "SIM115"]
fixable = ["ALL"]

# Disable all linting in tests, but still allow formatting there.
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ALL"]
"__init__.py" = ["F401"]
# lime.py uses intentional wildcard imports to allow easy swapping of pipeline modules
"chap_core/explainability/lime.py" = ["F403", "F405"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
log_cli = false
log_level = "WARNING"
norecursedirs = [
    "tests/data_wrangling",
    "tests/spatio_temporal_data",
    "tests/.github_cache",
    ".mypy_cache",
    "runs",
    "dist",
    "target",
    "external_models",
]
filterwarnings = [
    "ignore::DeprecationWarning:plotly.io._kaleido",
    # Celery plugin is imported before pytest can rewrite it
    # This is expected behavior when using celery.contrib.pytest
    "ignore::pytest.PytestAssertRewriteWarning",
    # Suppress ResourceWarnings from SQLAlchemy - connections are properly cleaned up
    # but Python's garbage collector complains about timing
    "ignore::ResourceWarning",
]
markers = [
    "slow: marks tests as slow running",
]
python_files = "test_*.py"
# Import mode to avoid other assertion rewriting issues
# Ignore specific test files that should not run
addopts = "--import-mode=importlib --ignore=tests/test_meteostat_wrapper"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
follow_imports = "normal"
files = ["chap_core/", "tests/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
# Suppress errors prevalent in test code (tighten gradually)
disable_error_code = [
    "arg-type",
    "call-arg",
    "attr-defined",
    "name-defined",
    "import-untyped",
    "import-not-found",
    "no-redef",
    "return-value",
    "var-annotated",
    "call-overload",
    "no-any-return",
]

# Ignore missing stubs for third-party libraries without type hints
[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bionumpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pooch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "topojson.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "libpysal.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gluonts.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "npstructures.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastdtw.*", "stumpy.*", "pyts.*", "scipy.*"]
ignore_missing_imports = true

# chap_core.explainability is research/experimental code only used by the
# `explain` CLI endpoint. Suppress prevalent mypy errors here following the
# same pattern as `tests.*` above; tighten gradually as the subpackage matures.
[[tool.mypy.overrides]]
module = "chap_core.explainability.*"
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "import-not-found",
    "import-untyped",
    "index",
    "no-any-return",
    "return-value",
    "union-attr",
    "var-annotated",
]

[tool.pyright]
pythonVersion = "3.13"
include = ["chap_core/", "tests/"]
exclude = [
    "**/.venv",
    "runs",
    "external_models",
    "tests/.github_cache",
]
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportPrivateUsage = false
reportMissingImports = "warning"
reportMissingTypeStubs = false
# Suppress errors prevalent in test code (tighten gradually):
# - reportArgumentType: Month(2020, 1) int literals vs Number type
# - reportCallIssue: BNPDataClass positional arguments
# - reportAttributeAccessIssue: Dynamic attributes on BNPDataClass
# - reportUndefinedVariable: Missing imports in some test files
# - reportOptionalMemberAccess: Optional handling
# - Others: Various minor issues
reportArgumentType = false
reportCallIssue = false
reportAttributeAccessIssue = false
reportUndefinedVariable = false
reportOptionalMemberAccess = false
reportIndexIssue = false
reportGeneralTypeIssues = false
reportAbstractUsage = false
reportRedeclaration = false
reportOptionalSubscript = false
reportReturnType = false
reportAssignmentType = false
